HTML AND CSS FIXED

--- a/index.html
+++ b/index.html
@@ -7,43 +7,39 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav>
-      <div class="logo">logo<span>.</span></div>
-      <div class="menu">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+    <div class="main-container">
+      <nav>
+        <div class="logo">logo<span>.</span></div>
+        <div class="menu">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact</a></li>
-        </ul>
+        </div>
+      </nav>
+      <div class="home-container" id="home">
+        <img src="./img/dp.png" alt="" />
+        <p>Hi I’m Virgin Human 👋🏻</p>
+        <h3>frontend web developer<br />based in India.</h3>
+        <span
+          >Nam et iaculis felis. Mauris et risus laoreet, dapibus dolor sit
+          amet,congue <br />
+          sapien. Nullam in ante vel tortor blandit fringilla.</span
+        >
+        <div class="btns">
+          <button class="lets-connect">Let’s connect</button>
+          <button class="resume">My resume</button>
+        </div>
       </div>
-    </nav>
-    <div class="circle">
-      <img src="./img/pink.svg" alt="" />
+      <div class="about-container" id="about">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nemo
+        excepturi cumque sequi libero, obcaecati aliquid, corrupti quam
+        voluptate illum architecto odit assumenda eveniet, maxime vel. Fugiat
+        odit ex assumenda.lorem Lorem, ipsum dolor sit amet consectetur
+        adipisicing elit. Numquam nisi, ratione suscipit illum temporibus sunt
+        fuga magnam, cupiditate est, asperiores laborum libero voluptates
+        excepturi. Vero qui veritatis rem obcaecati unde?
+      </div>
     </div>
-    <header>
-      <img src="./img/dp.png" alt="" />
-      <p>Hii I’m Virgin Human 👋🏻</p>
-      <h3>
-        frontend web developer<br />
-        based in India.
-      </h3>
-      <span
-        >Nam et iaculis felis. Mauris et risus laoreet, dapibus dolor sit
-        amet,congue <br />
-        sapien. Nullam in ante vel tortor blandit fringilla.</span
-      >
-      <div class="btns">
-        <div class="btn">
-          <img src="./img/right.svg" alt="" />
-          <button>Let’s connect</button>
-        </div>
-        <div class="btn">
-          <img src="./img/down.svg" alt="" />
-          <button id="download_resume">My resume</button>
-        </div>
-      </div>
-    </header>
-    <section></section>
   </body>
 </html>
