added about section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <p>Hi I’m Virgin Human 👋🏻</p>
         <h3>frontend web developer<br />based in India.</h3>
         <span
-          >Nam et iaculis felis. Mauris et risus laoreet, dapibus dolor sit
-          amet,congue <br />
-          sapien. Nullam in ante vel tortor blandit fringilla.</span
+          >Dynamic developer from India, fueled by an insatiable passion for
+          creating<br />
+          user friendly web applications</span
         >
         <div class="btns">
           <button class="lets-connect">Let’s connect</button>
@@ -32,13 +32,43 @@
         </div>
       </div>
       <div class="about-container" id="about">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam nemo
-        excepturi cumque sequi libero, obcaecati aliquid, corrupti quam
-        voluptate illum architecto odit assumenda eveniet, maxime vel. Fugiat
-        odit ex assumenda.lorem Lorem, ipsum dolor sit amet consectetur
-        adipisicing elit. Numquam nisi, ratione suscipit illum temporibus sunt
-        fuga magnam, cupiditate est, asperiores laborum libero voluptates
-        excepturi. Vero qui veritatis rem obcaecati unde?
+        <h2>About Me</h2>
+        <div class="about-main">
+          <img src="./img/myimage.jpg" alt="myimage" />
+          <div class="about-main-section">
+            <p>
+              Hello! I'm Sandesh Shrestha, a passionate web developer currently
+              pursuing a Bachelor of Computer Applications (BCA) at Maulana Abul
+              Kalam Azad University of Technology, WB. With a strong foundation
+              in both front-end and back-end technologies, I am dedicated to
+              creating dynamic and responsive web applications.
+            </p>
+            <div class="edu-section">
+              <h4>Education</h4>
+              <p>- Bachelor of Computer Applications (BCA)</p>
+              <p>- Army Public School (Sukna)</p>
+            </div>
+            <div class="skills-section">
+              <h4>Skills</h4>
+              <ul>
+                <li>Python</li>
+                <li>C</li>
+                <li>C++</li>
+                <li>DBMS</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>PHP</li>
+                <li>MySql</li>
+              </ul>
+            </div>
+            <p>
+              Apart from coding, I have a keen interest in cybersecurity and
+              constantly strive to learn more about protecting web applications
+              from potential threats. I also enjoy watching movies, with a
+              particular interest in the works of actor Cillian Murphy.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
