--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
       <div class="home-container" id="home">
         <img src="./img/dp.png" alt="" />
-        <p>Hi I’m Virgin Human 👋🏻</p>
+        <p>Hi I’m Varij 👋🏻</p>
         <h3>frontend web developer<br />based in India.</h3>
         <span
           >Dynamic developer from India, fueled by an insatiable passion for
